# MAC_Lab1

./: CMakeLists.txt  Giophant  Giophantus_druft.cpp  README.md  main.cpp
